Fix some layout bugs

--- a/src/styles-dark/layout.css
+++ b/src/styles-dark/layout.css
@@ -61,7 +61,6 @@
     background: rgba(255, 255, 255, 0.12);
     padding: .1em .15em;
     clear: both;
-    width: 100%
 }
 
 #barLeft {
