--- a/src/styles-dark/posts.css
+++ b/src/styles-dark/posts.css
@@ -14,5 +14,5 @@
 }
 
 .media {
-  max-width: 770px;
+  max-width: 100%;
 }
