--- a/src/styles-light/layout.css
+++ b/src/styles-light/layout.css
@@ -61,7 +61,6 @@
     background: #dee7ec;
     padding: .1em .15em;
     clear: both;
-    width: 100%
 }
 
 #barLeft {
